--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -39,7 +39,7 @@ chainlit = 'chainlit.cli:cli'
 script = "build.py"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<4.0.0"
+python = ">=3.10,<4.0.0"
 httpx = ">=0.23.0"
 literalai = "0.0.623"
 dataclasses_json = "^0.6.7"
@@ -84,7 +84,6 @@ discord = "^2.3.2"
 botbuilder-core = "^4.15.0"
 aiosqlite = "^0.20.0"
 pandas = "^2.2.2"
-moto = "^5.0.14"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.7.1"
@@ -97,10 +96,10 @@ mypy = "^1.13"
 types-requests = "^2.31.0.2"
 types-aiofiles = "^23.1.0.5"
 mypy-boto3-dynamodb = "^1.34.113"
-pandas-stubs = { version = "^2.2.2", python = ">=3.9" }
+pandas-stubs = { version = "^2.2.3.241126", python = ">=3.9" }  # Updated to match main group
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.12"
 
 
 [[tool.mypy.overrides]]
@@ -117,13 +116,9 @@ module = [
     "uptrace",
     "syncer",
     "azure.storage.filedatalake",
+    "moto",
 ]
 ignore_missing_imports = true
-
-
-
-
-
 
 
 [tool.poetry.group.custom-data]
