--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -53,7 +53,7 @@ asyncer = "^0.0.7"
 nest-asyncio = "^1.6.0"
 click = "^8.1.3"
 tomli = "^2.0.1"
-pydantic = ">=1,<3"
+pydantic = "^2.0.0"
 python-dotenv = "^1.0.0"
 uptrace = "^1.22.0"
 watchfiles = "^0.20.0"
@@ -77,7 +77,6 @@ llama-index = "^0.10.45"
 tenacity = "^8.4.1"
 transformers = "^4.38"
 matplotlib = "^3.7.1"
-farm-haystack = "^1.18.0"
 plotly = "^5.18.0"
 slack_bolt = "^1.18.1"
 discord = "^2.3.2"
@@ -107,7 +106,6 @@ module = [
     "boto3.dynamodb.types",
     "botbuilder.*",
     "filetype",
-    "haystack.*",
     "langflow",
     "lazify",
     "plotly",
@@ -119,6 +117,7 @@ module = [
     "moto",
 ]
 ignore_missing_imports = true
+
 
 
 [tool.poetry.group.custom-data]
