--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -53,7 +53,7 @@ asyncer = "^0.0.7"
 nest-asyncio = "^1.6.0"
 click = "^8.1.3"
 tomli = "^2.0.1"
-pydantic = "^2.0.0"
+pydantic = ">=2.0.0,<2.10.2"
 python-dotenv = "^1.0.0"
 uptrace = "^1.22.0"
 watchfiles = "^0.20.0"
