Allows me to make spontaneous file uploads and mic button disappear in mathpractice mode by adding the await cl.enable_mathpractice() function.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -63,6 +63,7 @@ packaging = "^23.1"
 python-multipart = "^0.0.9"
 pyjwt = "^2.8.0"
 numpy = "^1.26"
+pandas-stubs = "^2.2.3.241126"
 
 [tool.poetry.group.tests]
 optional = true
@@ -117,6 +118,7 @@ module = [
     "moto",
 ]
 ignore_missing_imports = true
+
 
 
 
