--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "chainlit"
-version = "2.0rc0"
+version = "2.0rc0.dev2+gogymi"
 keywords = [
     'LLM',
     'Agents',
@@ -13,7 +13,7 @@ keywords = [
     'conversational ai',
 ]
 description = "Build Conversational AI."
-authors = ["Willy Douhard", "Dan Andre Constantini"]
+authors = ["Willy Douhard", "Dan Andre Constantini", "Callum Chace-Macki", "Tom"]
 license = "Apache-2.0"
 homepage = "https://chainlit.io/"
 documentation = "https://docs.chainlit.io/"
