--- a/libs/copilot/package.json
+++ b/libs/copilot/package.json
@@ -7,6 +7,7 @@
     "preinstall": "npx only-allow pnpm",
     "dev": "vite",
     "build": "vite build",
+    "build:dev": "vite build --mode development",
     "preview": "vite preview",
     "lint": "eslint ./src --ext .ts,.tsx && tsc --noemit",
     "format": "prettier src/**/*.{ts,tsx} --write --loglevel error",
